# api

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  alembic.ini  babel.ini  config.sample.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: python.yaml
src/: __init__.py  app.py  cache.py  config.py  routing.py  security.py  template.py  text.py
src/api/: __init__.py  deps.py  params.py  schemas.py  tags.py
src/api/auth/: __init__.py  deps.py  routes.py  schemas.py
src/api/authors/: __init__.py  deps.py  models.py  routes.py  service.py
src/api/collections/: __init__.py  deps.py  models.py  routes.py  schemas.py  service.py
src/api/media/: __init__.py  routes.py
src/api/otp/: __init__.py  mailings.py  routes.py  schemas.py
src/api/otp/templates/: otp.jinja
src/api/quotes/: __init__.py  deps.py  enums.py  models.py  query.py  routes.py  schemas.py  service.py  session.py
src/api/users/: __init__.py  deps.py  models.py  routes.py  schemas.py  service.py
src/api/users/me/: __init__.py  deps.py  routes.py  schemas.py
src/api/v1/: __init__.py  schemas.py
src/db/: __init__.py  deps.py  mixins.py  models.py
src/db/migrations/: env.py  script.py.mako
src/i18n/: __init__.py  constants.py  deps.py  domain.py  middleware.py  spec.py  translator.py
src/mail/: __init__.py
src/mail/templates/: base.jinja  verification.jinja
src/storage/: fs.py  images.py  mimetype.py
(+51 files in other folders)
